crux-mir/test/symb_eval/crux/multi.good
test multi/3a1fbbbh::fail1[0]: FAILED
test multi/3a1fbbbh::fail2[0]: FAILED
test multi/3a1fbbbh::fail3[0]: FAILED

failures:

---- multi/3a1fbbbh::fail1[0] counterexamples ----
Failure for test/symb_eval/crux/multi.rs:8:22: error: in multi/3a1fbbbh::fail1[0]
attempt to add with overflow
Failure for ./lib/crucible/lib.rs:34:41: error: in multi/3a1fbbbh::fail1[0]
MIR assertion at test/symb_eval/crux/multi.rs:8:5:
	x + 1 > x

---- multi/3a1fbbbh::fail2[0] counterexamples ----
Failure for internal: error: in multi/3a1fbbbh::fail2[0]
panicking::begin_panic, called from multi/3a1fbbbh::fail2[0]

---- multi/3a1fbbbh::fail3[0] counterexamples ----
Failure for ./lib/crucible/lib.rs:34:41: error: in multi/3a1fbbbh::assert_zero[0]
MIR assertion at test/symb_eval/crux/multi.rs:20:5:
	x == 0

[Crux] Overall status: Invalid.
